--- a/rent-our-space.html
+++ b/rent-our-space.html
@@ -75,12 +75,44 @@
         <div class="background background--rent">
             <h2 class="title">Rent Our Space</h2>
         </div>
-    </div>
 
+        <!-- 
     <div class="row season-desc">
         <div class="col-xs-12 desc-wrapper">
             <div class="desc-wrapper">
-                <!--       <h3 class="season--title">Contact Us</h3> -->
+ 
+                <p>
+                    Lorem ipsum dolor sit amet, no molestie reprehendunt nec, in eum detracto voluptaria.
+                    Mea velit accommodare at, sed erant scripserit id. Sea quot minim maiorum te, veniam
+                    convenire ne duo, quo no prima epicuri repudiandae. Has unum meis nullam id, eos iusto
+                    utinam minimum ei.
+
+                    Justo persequeris ius ut, sit movet hendrerit te. Has invidunt sapientem democritum ex.
+                    Omnis volutpat urbanitas ea mea. No officiis honestatis eos, ne sea quaestio corrumpit.
+                    Porro quaestio sed ea, falli nusquam est ne. Eum ei fugit docendi, eum officiis
+                    laboramus scribentur ei.
+
+                    Sed ex adversarium comprehensam. Ei ius intellegat deterruisset, ut pro cibo fugit
+                    suavitate. Ullum omittantur conclusionemque ius ea, no ius deseruisse reformidans.
+                    Te scaevola consectetuer vis, ne mutat saepe quo. Eum possit discere mediocrem ei.
+                </p>
+    
+                <div class=" message">
+                    <form method="POST" action="https://kwes.io/api/foreign/forms/eAkcCGIQD8Zj2mUJrJ8x" mode="test">
+                        <input type="text" class="name" id="name" name="name" placeholder="Please enter your name">
+                        <input type="email" class="name" id="email" name="email" placeholder="Please enter your email">
+                        <textarea class="content" name="message" placeholder="Type message..."></textarea>
+                        <div class="name" style="background-color:transparent;">
+                            <button type="submit" value="Submit" />Submit</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div> -->
+
+        <section class="season-desc">
+            <div class="desc-wrapper">
                 <p>
                     Lorem ipsum dolor sit amet, no molestie reprehendunt nec, in eum detracto voluptaria.
                     Mea velit accommodare at, sed erant scripserit id. Sea quot minim maiorum te, veniam
@@ -98,8 +130,8 @@
                 </p>
                 <!-- kwes-form -->
                 <div class=" message">
-                    <form method="POST" action="https://kwes.io/api/foreign/forms/eAkcCGIQD8Zj2mUJrJ8x" mode="test">
-                        <input type="text" class="name" id="name" name="name" placeholder="Please enter your name">
+                    <form method="POST" action="https://kwes.io/api/foreign/forms/eAkcCGIQD8Zj2mUJrJ8x"> <input
+                            type="text" class="name" id="name" name="name" placeholder="Please enter your name">
                         <input type="email" class="name" id="email" name="email" placeholder="Please enter your email">
                         <textarea class="content" name="message" placeholder="Type message..."></textarea>
                         <div class="name" style="background-color:transparent;">
@@ -108,41 +140,14 @@
                     </form>
                 </div>
             </div>
-        </div>
+
+        </section>
     </div>
 
-    <!-- <section class="season-desc">
-        <div class="desc-wrapper">
-            <p>
-                Lorem ipsum dolor sit amet, no molestie reprehendunt nec, in eum detracto voluptaria.
-                Mea velit accommodare at, sed erant scripserit id. Sea quot minim maiorum te, veniam
-                convenire ne duo, quo no prima epicuri repudiandae. Has unum meis nullam id, eos iusto
-                utinam minimum ei.
 
-                Justo persequeris ius ut, sit movet hendrerit te. Has invidunt sapientem democritum ex.
-                Omnis volutpat urbanitas ea mea. No officiis honestatis eos, ne sea quaestio corrumpit.
-                Porro quaestio sed ea, falli nusquam est ne. Eum ei fugit docendi, eum officiis
-                laboramus scribentur ei.
-
-                Sed ex adversarium comprehensam. Ei ius intellegat deterruisset, ut pro cibo fugit
-                suavitate. Ullum omittantur conclusionemque ius ea, no ius deseruisse reformidans.
-                Te scaevola consectetuer vis, ne mutat saepe quo. Eum possit discere mediocrem ei.
-            </p>
-
-            <div class="kwes-form message">
-                <form method="POST" action="https://kwes.io/api/foreign/forms/eAkcCGIQD8Zj2mUJrJ8x"> <input type="text"
-                        class="name" id="name" name="name" placeholder="Please enter your name">
-                    <input type="email" class="name" id="email" name="email" placeholder="Please enter your email">
-                    <textarea class="content" name="message" placeholder="Type message..."></textarea>
-                    <div class="name" style="background-color:transparent;">
-                        <button type="submit" value="Submit" />Submit</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </section> -->
-
-
+    <div class="">
+        <img src="images/yellowbanner2.jpg" class="img-fluid breaker-image">
+    </div>
     <!----------- Footer ------------>
     <footer class="footer-bs">
         <div class="row">
@@ -150,9 +155,11 @@
                 <h4>About</h4>
                 <p>Welcome to the Sunflower Caffe. We are located on the historic Sonoma Plaza in the heart of the
                     California Wine Country. Our food is simple, our ingredients are real. We use salt from the San
-                    Francisco Bay, Milk from cows grazing in the Sonoma County pastures and local organic eggs in all of
+                    Francisco Bay, Milk from cows grazing in the Sonoma County pastures and local organic eggs in
+                    all of
                     our
-                    dishes. The Sunflower Caffe is located in Historic Landmark #501 - the old home of Salvador Vallejo.
+                    dishes. The Sunflower Caffe is located in Historic Landmark #501 - the old home of Salvador
+                    Vallejo.
                     He
                     ultimately lost it in a poker game, which worked out great for us</p>
                 <p>© 2014 BS3 UI Kit, All rights reserved</p>
