--- a/join-our-team.html
+++ b/join-our-team.html
@@ -70,14 +70,11 @@
     </header>
 
 
-    <div class="">
-        <img src="images/yellowbanner2.jpg" class="img-fluid breaker-image">
-    </div>
 
     <!-- parallax plus form -->
     <div class="parallax-wrapper">
         <div class="background background--team">
-            <h2 class="title">Join Our Team</h2>
+            <h2 class="title">Join Our Team</h2>got
         </div>
 
         <!-- 
@@ -153,7 +150,9 @@
 
 
 
-
+    <div class="">
+        <img src="images/yellowbanner2.jpg" class="img-fluid breaker-image">
+    </div>
 
     <!----------- Footer ------------>
     <footer class="footer-bs">
