--- a/rent-our-space.html
+++ b/rent-our-space.html
@@ -144,10 +144,13 @@
         </section>
     </div>
 
-
     <div class="">
         <img src="images/yellowbanner2.jpg" class="img-fluid breaker-image">
     </div>
+    <!-- 
+    <div class="">
+        <img src="images/yellowbanner2.jpg" class="img-fluid breaker-image">
+    </div> -->
     <!----------- Footer ------------>
     <footer class="footer-bs">
         <div class="row">
