--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- Navigation -->
     <div class="navigation-wrap bg-light start-header start-style">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <div class="col-12">
             <nav class="navbar navbar-expand-md navbar-light">
