--- a/index.html
+++ b/index.html
@@ -1112,7 +1112,7 @@
   <!----------- Footer ------------>
   <footer class="footer-bs">
     <div class="row">
-      <div class="col-md-6 footer-brand animated fadeInLeft">
+      <div class="col-md-6 footer-social footer-brand animated fadeInLeft">
         <h4>About</h4>
         <p>Welcome to the Sunflower Caffe. We are located on the historic Sonoma Plaza in the heart of the
           California Wine Country. Our food is simple, our ingredients are real. We use salt from the San
