--- a/rent-our-space.html
+++ b/rent-our-space.html
@@ -159,7 +159,7 @@
                         Vallejo.
                         He
                         ultimately lost it in a poker game, which worked out great for us</p>
-                    <p>© 2014 BS3 UI Kit, All rights reserved</p>
+                    <p>© 2019 Sunflower Caffé</p>
                 </div>
                 <div class="col-md-2 footer-social animated fadeInDown">
                     <h4>Connect</h4>
