--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                 class="menu-ingredients menu-price pl-2">
                 8.</span></span><br>
             <span class="menu-ingredients">banana, peach, mango, orange juice, organic greek yogurt</span><br>
-            <span class="menu-text d-inline-block second-menu-column pt-5">Very Berry<span
+            <span class="menu-text d-inline-block second-menu-column">Very Berry<span
                 class="menu-ingredients menu-price pl-2">
                 8.</span></span><br>
             <span class="menu-ingredients">strawberries, blueberries, organic apple juice</span><br>
@@ -601,17 +601,17 @@
               32.</span><br>
           </div>
           <div class="col-md-5">
-            <span class="menu-text d-inline-block">Liocco Chardonnay </span><br>
+            <span class="menu-text d-inline-block second-menu-column">Liocco Chardonnay </span><br>
             <span class="menu-ingredients">Sonoma County 12. 25. 42.</span><br>
             <span class="menu-text d-inline-block pt-5">Bedrock Rose</span><br>
             <span class="menu-ingredients">Sonoma Valley 11. 24. 37.</span><br>
             <span class="menu-text d-inline-block pt-5">Maui Sauvignon Blanc</span><br>
             <span class="menu-ingredients">Nz 10.
               23. 36.</span><br>
-            <span class="menu-text d-inline-block second-menu-column pt-5">Chaname Grenache</span><br>
+            <span class="menu-text d-inline-block second-menu-column">Chaname Grenache</span><br>
             <span class="menu-ingredients">Anderson Valley 12.
               29. 48.</span><br>
-            <span class="menu-text d-inline-block pt-5">Chaname Pinot Noir</span><br>
+            <span class="menu-text d-inline-block second-menu-column">Chaname Pinot Noir</span><br>
             <span class="menu-ingredients">Anderson Valley 13. 29. 48.</span><br>
           </div><br>
         </div>
