--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   <!-- menu replacing -->
 
   <div id="main_place">
-    <div class="container-fluid" id="menus">
+    <div class="container" id="menus">
       <div class="section menu-divider mt-5 mb-5">
         <div class="row">
           <div class="col-md-1">
@@ -845,51 +845,51 @@
 
   <div id="gallery" class="masonry">
     <div class="item">
-      1
+
       <img src="images/sfc-2.jpg">
     </div>
     <div class="item">
-      2
+
       <img src="images/sfc-4.jpg">
     </div>
     <div class="item">
-      3
+
       <img src="images/sfc-8.jpg">
     </div>
     <div class="item">
-      4
+
       <img src="images/sfc-1.jpg">
     </div>
     <div class="item">
-      5
+
       <img src="images/sfc-5.jpg">
     </div>
     <div class="item">
-      6
+
       <img src="images/sfc-6.jpg">
     </div>
     <div class="item">
-      7
+
       <img src="images/sfc-11.jpg">
     </div>
     <div class="item">
-      8
+
       <img src="images/sfc-8.jpg">
     </div>
     <div class="item">
-      9
+
       <img src="images/sfc-9.jpg">
     </div>
     <div class="item">
-      10
+
       <img src="images/sfc-10.jpg">
     </div>
     <div class="item">
-      11
+
       <img src="images/sfc-13.jpg">
     </div>
     <div class="item">
-      12
+
       <img src="images/sfc-12.jpg">
     </div>
 
@@ -1150,8 +1150,6 @@
           </div>
         </form>
       </div>
-
-
   </footer>
 
   <!----------- Footer ------------>
