--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
   <div class="container-fluid contact-info"
     style=" background-image: url('images/halflower.png'); background-position: right; background-repeat: no-repeat;">
     <div class="row justify-content-center">
-      <div class="col-md-4 text-center">
+      <div class="col-md-4 col-xs-2 text-center">
         <h5 class="mt-5 hours">Contact</h5>
         <p>Open Daily 7am-4pm</p>
         <p>(707) 996-6645</p>
       </div>
-      <div class="col-md-4 text-center location-info">
+      <div class="col-md-4 col-xs-2 text-center location-info">
         <h5 class="mt-5 location">Location</h5>
         <p>421 1ST St. W
           <br>
@@ -105,7 +105,7 @@
           onclick="window.location.href = 'https://goo.gl/maps/XxufiMfUpcopMT4Z6';" </a>Click here for map</a>
           <span>&rarr;</span>
       </div>
-      <div class="col-md-4 text-center mb-5">
+      <div class="col-md-4 col-xs-2 text-center mb-5">
         <h5 class="mt-5 hours">Connect</h5>
         <a class="connect right-arrow"
           href="https://www.facebook.com/SunflowerCaffe/">Facebook</a><span>&rarr;</span><br>
