--- a/join-our-team.html
+++ b/join-our-team.html
@@ -76,7 +76,7 @@
 
     <div class="parallax-wrapper">
         <div class="background background--team">
-            <h2 class="title">Rent Our Space</h2>
+            <h2 class="title">Join Our Team</h2>
         </div>
         <section class="season-desc">
             <div class="desc-wrapper">
