contact info side by side in mobile

--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
   <!-- Contact Info -->
   <div class="container-fluid contact-info"
     style=" background-image: url('images/halflower.png'); background-position: right; background-repeat: no-repeat;">
-    <div class="row justify-content-center">
-      <div class="col-md-4 col-xs-2 text-center">
+    <div class="row">
+      <div class="col-md-4 col-xs-2 text-center contact-info-col">
         <h5 class="mt-5 hours">Contact</h5>
         <p>Open Daily 7am-4pm</p>
         <p>(707) 996-6645</p>
       </div>
-      <div class="col-md-4 col-xs-2 text-center location-info">
+      <div class="col-md-4 col-xs-2 text-center location-info contact-info-col">
         <h5 class="mt-5 location">Location</h5>
         <p>421 1ST St. W
           <br>
@@ -105,15 +105,45 @@
           onclick="window.location.href = 'https://goo.gl/maps/XxufiMfUpcopMT4Z6';" </a>Click here for map</a>
           <span>&rarr;</span>
       </div>
-      <div class="col-md-4 col-xs-2 text-center mb-5">
+      <div class="col-md-4 col-xs-2 text-center mb-5 contact-info-col">
         <h5 class="mt-5 hours">Connect</h5>
         <a class="connect right-arrow"
           href="https://www.facebook.com/SunflowerCaffe/">Facebook</a><span>&rarr;</span><br>
-        <!-- <a class="connect right-arrow" href="#">Twitter</a><span>&rarr;</span><br> -->
         <a class="connect right-arrow" href="https://www.instagram.com/sunflowercaffe/">Instagram</a><span>&rarr;</span>
       </div>
     </div>
   </div>
+
+
+  <!-- <div class="container-fluid">
+    <div class="row"
+      style=" background-image: url('images/halflower.png'); background-position: right; background-repeat: no-repeat;">
+      <div class="col-xs-3">
+        <h5 class="mt-5 hours">Contact</h5>
+        <p>Open Daily 7am-4pm</p>
+        <p>(707) 996-6645</p>
+      </div>
+      <div class="col-xs-3">
+        <h5 class="mt-5 location">Location</h5>
+        <p>421 1ST St. W
+          <br>
+          Sonoma, CA, 95476
+          <br>
+        </p><br>
+        <a class="map-btn right-arrow" href="#"
+          onclick="window.location.href = 'https://goo.gl/maps/XxufiMfUpcopMT4Z6';" <a>Click here for map</a>
+        <span>&rarr;</span>
+      </div>
+      <div class="col-xs-3">
+        <h5 class="mt-5 hours">Connect</h5>
+        <a class="connect right-arrow"
+          href="https://www.facebook.com/SunflowerCaffe/">Facebook</a><span>&rarr;</span><br>
+        <a class="connect right-arrow" href="https://www.instagram.com/sunflowercaffe/">Instagram</a><span>&rarr;</span>
+      </div>
+    </div>
+  </div> -->
+
+
 
   <!-- Breaker -->
   <div class="">
