--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   <!-- menu replacing buttons -->
 
   <div id="button-background">
-    <button class="button" id="eat-button" onclick="show('eat-menu')">Eat</button>
+    <button class="button active" id="eat-button" onclick="show('eat-menu')">Eat</button>
     <button class="button" id="drink-button" onclick="show('drink-menu')">Drink</button>
   </div>
 
