--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   <!-- menu replacing buttons -->
 
   <div id="button-background">
-    <button class="button active" id="eat-button" onclick="show('eat-menu')">Eat</button>
+    <button class="button active1" id="eat-button" onclick="show('eat-menu')">Eat</button>
     <button class="button" id="drink-button" onclick="show('drink-menu')">Drink</button>
   </div>
 
@@ -676,7 +676,6 @@
           plaza</span>
       </div>
     </div>
-
     <div class="section menu-divider mb-5">
       <div class="row">
         <div class="col-md-1">
@@ -707,9 +706,7 @@
 
   <!-- replacing content -->
   <!-- <button onclick="showMicro()">Show Microsoft</button>
-
   <button onclick="showw3c()">Show w3c</button>
-
   <div id="demo">Visit Microsoft!</div> -->
 
 
@@ -738,8 +735,6 @@
         </div>
       </div>
     </div>
-
-
     <div class="section menu-divider mb-5">
       <div class="row">
         <div class="col-md-1">
@@ -764,7 +759,6 @@
         </div>
       </div>
     </div>
-
     <div class="section menu-divider mb-5">
       <div class="row">
         <div class="col-md-1">
@@ -804,8 +798,6 @@
         </div>
       </div>
     </div>
-
-
     <div class="section menu-divider mb-5">
       <div class="row">
         <div class="col-md-1">
@@ -944,27 +936,22 @@
   <div class="container-fluid">
     <div class="row image">
       <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
-
         <img src="https://www.w3schools.com/w3images/wedding.jpg" class="img-fluid">
         <img src="https://www.w3schools.com/w3images/rocks.jpg" class="img-fluid">
-
       </div>
       <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
         <img src="https://www.w3schools.com/w3images/underwater.jpg" class="img-fluid">
         <img src="https://www.w3schools.com/w3images/ocean.jpg" class="img-fluid">
         <img src="https://www.w3schools.com/w3images/wedding.jpg" class="img-fluid">
-
       </div>
       <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
         <img src="https://www.w3schools.com/w3images/wedding.jpg" class="img-fluid">
         <img src="https://www.w3schools.com/w3images/rocks.jpg" class="img-fluid">
-
       </div>
       <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
         <img src="https://www.w3schools.com/w3images/underwater.jpg" class="img-fluid">
         <img src="https://www.w3schools.com/w3images/ocean.jpg" class="img-fluid">
         <img src="https://www.w3schools.com/w3images/wedding.jpg" class="img-fluid">
-
       </div>
     </div>
   </div> -->
@@ -1031,10 +1018,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-1">
-
           </div>
           <div class="col-md-5 col-sm-12 pb-3">
-
            
             <div class="footer-pad">
               <h4>About</h4>
@@ -1048,7 +1033,6 @@
             </div>
           </div>
           <div class="col-md-5 col-sm-10 col-xs-8 pt-4">
-
             <div class="white-box">
               <h4>Heading 2</h4>
               <button type="button" class="btn footer-btn">
@@ -1072,8 +1056,6 @@
             <p class="text-center">© Copyright 2018 - Company Name. All rights reserved.</p>
           </div>
         </div>
-
-
       </div>
     </div>
   </footer> -->
@@ -1083,7 +1065,6 @@
       <img
         src="https://img.buzzfeed.com/buzzfeed-static/static/2015-08/11/14/enhanced/webdr01/original-9161-1439317330-3.jpg?downsize=715:*&output-format=auto&output-quality=auto"
         alt="" width="100%" height="auto" class="gallery-img" />
-
       <img
         src="https://img.buzzfeed.com/buzzfeed-static/static/2015-08/11/14/enhanced/webdr08/original-1654-1439317465-3.jpg?downsize=715:*&output-format=auto&output-quality=auto"
         alt="" width="100%" height="auto" class="gallery-img" />
@@ -1093,8 +1074,6 @@
       <img
         src="https://img.buzzfeed.com/buzzfeed-static/static/2015-08/11/15/enhanced/webdr04/original-25740-1439321209-5.jpg?downsize=715:*&output-format=auto&output-quality=auto"
         alt="" width="100%" height="auto" class="gallery-img" />
-
-
       <img
         src="https://img.buzzfeed.com/buzzfeed-static/static/2015-08/11/15/enhanced/webdr02/original-16901-1439320287-3.jpg?downsize=715:*&output-format=auto&output-quality=auto"
         alt="" width="100%" height="auto" class="gallery-img" />
@@ -1110,7 +1089,6 @@
       <img
         src="https://img.buzzfeed.com/buzzfeed-static/static/2015-08/11/14/enhanced/webdr11/original-8867-1439317446-6.jpg?downsize=715:*&output-format=auto&output-quality=auto"
         alt="" width="100%" height="auto" class="gallery-img" />
-
     </div>
   </div> -->
 
@@ -1182,45 +1160,12 @@
       </div>
   </footer>
 
-  <!----------- Footer ------------>
-  <!-- <footer class="footer-bs">
-    <div class="row">
-      <div class="col-md-6 footer-brand animated fadeInLeft">
-        <h4>About</h4>
-        <p>Welcome to the Sunflower Caffe. We are located on the historic Sonoma Plaza in the heart of the
-          California Wine Country. Our food is simple, our ingredients are real. We use salt from the San
-          Francisco Bay, Milk from cows grazing in the Sonoma County pastures and local organic eggs in all of
-          our
-          dishes. The Sunflower Caffe is located in Historic Landmark #501 - the old home of Salvador Vallejo.
-          He
-          ultimately lost it in a poker game, which worked out great for us</p>
-        <p>© 2014 BS3 UI Kit, All rights reserved</p>
-      </div>
-
-      <div class="col-md-4 footer-social animated fadeInDown">
-        <h4>Connect</h4>
-        <ul class="social-network social-circle text-center">
-          <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li><br><br>
-          <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li><br><br>
-          <li><a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-        </ul>
-      </div>
-  </footer> -->
-
-
-
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-  </script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
   <script src="https://kwes.io/js/kwes.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
-
 </body>
 
 </html>
