--- a/join-our-team.html
+++ b/join-our-team.html
@@ -86,6 +86,11 @@
                     convenire ne duo, quo no prima epicuri repudiandae. Has unum meis nullam id, eos iusto
                     utinam minimum ei.
 
+                    Lorem ipsum dolor sit amet, no molestie reprehendunt nec, in eum detracto voluptaria.
+                    Mea velit accommodare at, sed erant scripserit id. Sea quot minim maiorum te, veniam
+                    convenire ne duo, quo no prima epicuri repudiandae. Has unum meis nullam id, eos iusto
+                    utinam minimum ei.
+
                 </p>
                 <div class="message">
                     <form action="post">
