--- a/rent-our-space.html
+++ b/rent-our-space.html
@@ -108,7 +108,6 @@
     </div>
     </section> -->
     <!-- </div> -->
-
     <div class="parallax-wrapper">
         <div class="background background--rent">
             <h2 class="title">Rent Our Space</h2>
@@ -121,8 +120,12 @@
                     convenire ne duo, quo no prima epicuri repudiandae. Has unum meis nullam id, eos iusto
                     utinam minimum ei.
 
-                </p>
+                    Lorem ipsum dolor sit amet, no molestie reprehendunt nec, in eum detracto voluptaria.
+                    Mea velit accommodare at, sed erant scripserit id. Sea quot minim maiorum te, veniam
+                    convenire ne duo, quo no prima epicuri repudiandae. Has unum meis nullam id, eos iusto
+                    utinam minimum ei.
 
+                </p>
                 <div class="message">
                     <form action="post">
                         <input type="text" class="name" id="name" name="name" placeholder="Please enter your name">
@@ -138,13 +141,12 @@
             </div>
         </section>
 
+
         <div class="">
             <img src="images/yellowbanner2.jpg" class="img-fluid breaker-image">
         </div>
-        <!-- 
-    <div class="">
-        <img src="images/yellowbanner2.jpg" class="img-fluid breaker-image">
-    </div> -->
+
+
         <!----------- Footer ------------>
         <footer class="footer-bs">
             <div class="row">
