--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
   <!-- <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css"> -->
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300&display=swap" rel="stylesheet">
+  <!-- nav -->
+  <link href="https://fonts.googleapis.com/css?family=Average+Sans&display=swap" rel="stylesheet">
+
+  <!-- menu txt -->
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
 
   <!-- Boostrap Css -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -503,7 +507,7 @@
                 class="menu-ingredients menu-price pl-2">
                 8.</span></span><br>
             <span class="menu-ingredients">banana, peach, mango, orange juice, organic greek yogurt</span><br>
-            <span class="menu-text d-inline-block second-menu-column">Very Berry<span
+            <span class="menu-text d-inline-block second-menu-column test">Very Berry<span
                 class="menu-ingredients menu-price pl-2">
                 8.</span></span><br>
             <span class="menu-ingredients">strawberries, blueberries, organic apple juice</span><br>
@@ -635,13 +639,13 @@
             <span class="menu-ingredients">Sonoma County 12. 25. 42.</span><br>
             <span class="menu-text d-inline-block pt-5">Bedrock Rose</span><br>
             <span class="menu-ingredients">Sonoma Valley 11. 24. 37.</span><br>
-            <span class="menu-text d-inline-block pt-5">Maui Sauvignon Blanc</span><br>
+            <span class="menu-text d-inline-block second-menu-column test">Maui Sauvignon Blanc</span><br>
             <span class="menu-ingredients">Nz 10.
               23. 36.</span><br>
-            <span class="menu-text d-inline-block second-menu-column">Chaname Grenache</span><br>
+            <span class="menu-text d-inline-block second-menu-column test">Chaname Grenache</span><br>
             <span class="menu-ingredients">Anderson Valley 12.
               29. 48.</span><br>
-            <span class="menu-text d-inline-block second-menu-column">Chaname Pinot Noir</span><br>
+            <span class="menu-text d-inline-block second-menu-column test">Chaname Pinot Noir</span><br>
             <span class="menu-ingredients">Anderson Valley 13. 29. 48.</span><br>
           </div><br>
         </div>
@@ -1121,7 +1125,7 @@
   <footer class="footer-bs">
     <div class="row">
       <div class="col-md-6 footer-social footer-brand animated fadeInLeft">
-        <h4>About</h4>
+        <h4 contact-header>About</h4>
         <p>Welcome to the Sunflower Caffe. We are located on the historic Sonoma Plaza in the heart of the
           California Wine Country. Our food is simple, our ingredients are real. We use salt from the San
           Francisco Bay, Milk from cows grazing in the Sonoma County pastures and local organic eggs in all of
@@ -1132,7 +1136,7 @@
         <p>© 2019 Sunflower Caffé</p>
       </div>
       <div class="col-md-2 footer-social animated fadeInDown">
-        <h4>Connect</h4>
+        <h4 contact-header>Connect</h4>
 
         <ul class="social-network social-circle text-center">
           <li><a href="https://www.facebook.com/SunflowerCaffe/"" class=" icoFacebook" title="Facebook"><i
@@ -1143,7 +1147,7 @@
         </ul>
       </div>
       <div class="col-md-4 footer-ns animated fadeInRight">
-        <h4>Newsletter</h4>
+        <h4 contact-header>Newsletter</h4>
         <p>Keep up with the Sunflower!</p>
         <form action="https://sonomasunflower.us7.list-manage.com/subscribe/post" method="POST">
           <input type="hidden" name="u" value="4ae5921a3912b451ab862009e">
