--- a/rent-our-space.html
+++ b/rent-our-space.html
@@ -114,7 +114,7 @@
         </div>
         <section class="season-desc">
             <div class="desc-wrapper">
-                <p>
+                <p class="contact-pages">
                     Lorem ipsum dolor sit amet, no molestie reprehendunt nec, in eum detracto voluptaria.
                     Mea velit accommodare at, sed erant scripserit id. Sea quot minim maiorum te, veniam
                     convenire ne duo, quo no prima epicuri repudiandae. Has unum meis nullam id, eos iusto
