--- a/index.html
+++ b/index.html
@@ -111,9 +111,11 @@
       </div>
       <div class="col-md-4 col-xs-2 text-center mb-5 contact-info-col">
         <h5 class="mt-5 hours">Connect</h5>
-        <a class="connect right-arrow"
-          href="https://www.facebook.com/SunflowerCaffe/">Facebook</a><span>&rarr;</span><br>
-        <a class="connect right-arrow" href="https://www.instagram.com/sunflowercaffe/">Instagram</a><span>&rarr;</span>
+        <p><a class="connect right-arrow"
+            href="https://www.facebook.com/SunflowerCaffe/">Facebook</a><span>&rarr;</span><br>
+          <a class="connect right-arrow"
+            href="https://www.instagram.com/sunflowercaffe/">Instagram</a><span>&rarr;</span>
+        </p>
       </div>
     </div>
   </div>
