--- a/index.html
+++ b/index.html
@@ -872,51 +872,51 @@
 
 
   <div id="gallery" class="masonry">
-    <div class="item">
+    <div class="item 1">
 
       <img src="images/sfc-2.jpg">
     </div>
-    <div class="item">
+    <div class="item 2">
 
       <img src="images/sfc-4.jpg">
     </div>
-    <div class="item">
+    <div class="item 3">
 
       <img src="images/sfc-8.jpg">
     </div>
-    <div class="item">
+    <div class="item 4">
 
       <img src="images/sfc-1.jpg">
     </div>
-    <div class="item">
+    <div class="item 5">
 
-      <img src="images/sfc-5.jpg">
+      <img src="images/sfc-20.jpg">
     </div>
-    <div class="item">
+    <div class="item 6">
 
       <img src="images/sfc-6.jpg">
     </div>
-    <div class="item">
+    <div class="item 7">
 
       <img src="images/sfc-11.jpg">
     </div>
-    <div class="item">
+    <div class="item 8">
 
-      <img src="images/sfc-8.jpg">
+      <img src="images/sfc-15.jpg">
     </div>
-    <div class="item">
+    <div class="item 9">
 
       <img src="images/sfc-9.jpg">
     </div>
-    <div class="item">
+    <div class="item 11">
 
       <img src="images/sfc-10.jpg">
     </div>
-    <div class="item">
+    <div class="item 12">
 
       <img src="images/sfc-13.jpg">
     </div>
-    <div class="item">
+    <div class="item 13">
 
       <img src="images/sfc-12.jpg">
     </div>
