--- a/rent-our-space.html
+++ b/rent-our-space.html
@@ -150,8 +150,8 @@
         <!----------- Footer ------------>
         <footer class="footer-bs">
             <div class="row">
-                <div class="col-md-6 footer-brand animated fadeInLeft">
-                    <h4>About</h4>
+                <div class="col-md-6 footer-social footer-brand animated fadeInLeft">
+                    <h4 contact-header>About</h4>
                     <p>Welcome to the Sunflower Caffe. We are located on the historic Sonoma Plaza in the heart of the
                         California Wine Country. Our food is simple, our ingredients are real. We use salt from the San
                         Francisco Bay, Milk from cows grazing in the Sonoma County pastures and local organic eggs in
@@ -164,7 +164,7 @@
                     <p>© 2019 Sunflower Caffé</p>
                 </div>
                 <div class="col-md-2 footer-social animated fadeInDown">
-                    <h4>Connect</h4>
+                    <h4 contact-header>Connect</h4>
 
                     <ul class="social-network social-circle text-center">
                         <li><a href="https://www.facebook.com/SunflowerCaffe/"" class=" icoFacebook" title="Facebook"><i
@@ -175,7 +175,7 @@
                     </ul>
                 </div>
                 <div class="col-md-4 footer-ns animated fadeInRight">
-                    <h4>Newsletter</h4>
+                    <h4 contact-header>Newsletter</h4>
                     <p>Keep up with the Sunflower!</p>
                     <form action="https://sonomasunflower.us7.list-manage.com/subscribe/post" method="POST">
                         <input type="hidden" name="u" value="4ae5921a3912b451ab862009e">
@@ -191,8 +191,6 @@
                         </div>
                     </form>
                 </div>
-
-
         </footer>
 
 
