--- a/rent-our-space.html
+++ b/rent-our-space.html
@@ -18,6 +18,7 @@
     <!-- External Files -->
     <link rel="stylesheet" href="css/index.css">
 
+
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 </head>
@@ -49,11 +50,10 @@
                                         <a class="nav-link" href="index.html">Home</a>
                                     </li>
                                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                        <a class="nav-link" href="index.html#menus">Eat +
-                                            Drink</a>
+                                        <a class="nav-link" href="#menus">Eat + Drink</a>
                                     </li>
                                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                        <a class="nav-link" href="index.html#gallery">Gallery</a>
+                                        <a class="nav-link" href="#gallery">Gallery</a>
                                     </li>
                                     <li class="nav-item pl-4 pl-md-0 ml-0">
                                     </li>
@@ -66,6 +66,7 @@
                                 </ul>
                             </div>
                         </nav>
+
 
 
     </header>
