--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
             </nav>
 
 
+
+
   </header>
 
   <!-- Hero Image -->
@@ -95,7 +97,7 @@
     <div class="row">
       <div class="col-md-4 col-xs-2 text-center contact-info-col">
         <h5 class="mt-5 hours">Contact</h5>
-        <p><b>Open Daily</b> 7am-4pm</p>
+        <p>Open Daily 7am-4pm</p>
         <p class="phone-number">(707) 996-6645</p>
       </div>
       <div class="col-md-4 col-xs-2 text-center location-info contact-info-col">
