--- a/rent-our-space.html
+++ b/rent-our-space.html
@@ -50,10 +50,10 @@
                                         <a class="nav-link" href="index.html">Home</a>
                                     </li>
                                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                        <a class="nav-link" href="#menus">Eat + Drink</a>
+                                        <a class="nav-link" href="index.html#menus">Eat + Drink</a>
                                     </li>
                                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                        <a class="nav-link" href="#gallery">Gallery</a>
+                                        <a class="nav-link" href="index.html#gallery">Gallery</a>
                                     </li>
                                     <li class="nav-item pl-4 pl-md-0 ml-0">
                                     </li>
