--- a/index.html
+++ b/index.html
@@ -617,6 +617,7 @@
       <div class="section menu-divider mb-5">
         <div class="row">
           <div class="col-md-1">
+            <img src="images/beerwine-rotate.png" class="menu-header-mobile pb-4">
             <img src="images/beer-wine.png" class="menu-header">
           </div>
           <div class="col-md-5 menu-section">
@@ -1130,7 +1131,8 @@
     <div class="row">
       <div class="col-md-6 footer-social footer-brand animated fadeInLeft">
         <h4 contact-header>About</h4>
-        <p>Welcome to the Sunflower Caffe. We are located on the historic Sonoma Plaza in the heart of the
+        <p class="contact-text">Welcome to the Sunflower Caffe. We are located on the historic Sonoma Plaza in the heart
+          of the
           California Wine Country. Our food is simple, our ingredients are real. We use salt from the San
           Francisco Bay, Milk from cows grazing in the Sonoma County pastures and local organic eggs in all of
           our
@@ -1152,7 +1154,7 @@
       </div>
       <div class="col-md-4 footer-ns animated fadeInRight">
         <h4 contact-header>Newsletter</h4>
-        <p>Keep up with the Sunflower!</p>
+        <p class="contact-text">Keep up with the Sunflower!</p>
         <form action="https://sonomasunflower.us7.list-manage.com/subscribe/post" method="POST">
           <input type="hidden" name="u" value="4ae5921a3912b451ab862009e">
           <input type="hidden" name="id" value="c5b62202c9">
