--- a/join-our-team.html
+++ b/join-our-team.html
@@ -77,29 +77,23 @@
 
 
     <div class="parallax-wrapper">
-        <div class="background background--team">
+        <div class="background background--team">.
             <h2 class="title">Join Our Team</h2>
         </div>
         <section class="season-desc">
             <div class="desc-wrapper">
-                <p class="contact-pages">
-                    Lorem ipsum dolor sit amet, no molestie reprehendunt nec, in eum detracto voluptaria.
-                    Mea velit accommodare at, sed erant scripserit id. Sea quot minim maiorum te, veniam
-                    convenire ne duo, quo no prima epicuri repudiandae. Has unum meis nullam id, eos iusto
-                    utinam minimum ei.
 
-                    Lorem ipsum dolor sit amet, no molestie reprehendunt nec, in eum detracto voluptaria.
-                    Mea velit accommodare at, sed erant scripserit id. Sea quot minim maiorum te, veniam
-                    convenire ne duo, quo no prima epicuri repudiandae. Has unum meis nullam id, eos iusto
-                    utinam minimum ei.
-
-                </p>
-                <div class="message">
+                <div class="message1">
                     <form action="post">
-                        <input type="text" class="name" id="name" name="name" placeholder="Please enter your name">
+                        <input type="text" class="name" id="name" name="name" placeholder="Full name">
                         <input type="email" class="name" id="email" name="password"
-                            placeholder="Please enter your email">
-                        <textarea class="content" placeholder="Type message..."></textarea>
+                            placeholder="Email">
+                        <input type="tel" class="phone" id="phone" name="phone" placeholder="Phone number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+                            required>
+                        <small>Format: 123-456-7890</small>
+                        <textarea class="content1" placeholder="What position you would like to apply for?"></textarea>
+                        <textarea class="content"
+                            placeholder="Tell us a bit about yourself and what you are looking for in a job..."></textarea>
                         <div class="name" style="background-color:transparent;">
                             <button type="submit" value="Submit" />Submit</button>
                         </div>
