--- a/rent-our-space.html
+++ b/rent-our-space.html
@@ -115,24 +115,19 @@
         </div>
         <section class="season-desc">
             <div class="desc-wrapper">
+                <h4 class="text-center">Looking for a party venue?</h4>
                 <p class="contact-pages">
-                    Lorem ipsum dolor sit amet, no molestie reprehendunt nec, in eum detracto voluptaria.
-                    Mea velit accommodare at, sed erant scripserit id. Sea quot minim maiorum te, veniam
-                    convenire ne duo, quo no prima epicuri repudiandae. Has unum meis nullam id, eos iusto
-                    utinam minimum ei.
-
-                    Lorem ipsum dolor sit amet, no molestie reprehendunt nec, in eum detracto voluptaria.
-                    Mea velit accommodare at, sed erant scripserit id. Sea quot minim maiorum te, veniam
-                    convenire ne duo, quo no prima epicuri repudiandae. Has unum meis nullam id, eos iusto
-                    utinam minimum ei.
-
+                    Party Reservations are available after-hours from: 5:30pm-9:00pm.
                 </p>
                 <div class="message">
                     <form action="post">
-                        <input type="text" class="name" id="name" name="name" placeholder="Please enter your name">
+                        <input type="text" class="name" id="name" name="name" placeholder="Full Name">
                         <input type="email" class="name" id="email" name="password"
-                            placeholder="Please enter your email">
-                        <textarea class="content" placeholder="Type message..."></textarea>
+                            placeholder="Email">
+                            <input type="tel" class="phone" id="phone" name="phone" placeholder="Phone number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+                            required>
+                        <small>Format: 123-456-7890</small>
+                        <textarea class="content" placeholder="Please enter details of requested party..."></textarea>
                         <div class="name" style="background-color:transparent;">
                             <button type="submit" value="Submit" />Submit</button>
                         </div>
